--- a/index.html
+++ b/index.html
@@ -2,8 +2,72 @@
 layout: default
 ---
 
-<div class="home">
+<header class="hero">
+  <div class="span1-2 residential-hero">
+    <hgroup class="hero-title-group">
+      <h1>Residential</h1>
+      <a href="{{ '/residential' | prepend: site.baseurl }}">
+        Learn More
+      </a>
+    </hgroup>
+  </div>
+  <div class="span1-2 commercial-hero">
+    <hgroup class="hero-title-group">
+      <h1>Commercial</h1>
+      <a href="{{ '/commercial' | prepend: site.baseurl }}">
+        Learn More
+      </a>
+    </hgroup>
+  </div>
+</header>
 
-  <h1 class="page-heading">Well hello there! I am a home page.</h1>
+<section class="home-services-section">
+  {% include services_overview.html %}
+</section>
 
-</div>
+<section class="home-about-section">
+  <div class="group">
+    <div class="span3-4">
+      <hgroup>
+        <h1>celebrating 100 years!</h1>
+      </hgroup>
+      <p>
+        In 1916, Linek Brothers Plumbing Company was founded by Frank and Henry
+        Linek specializing in performing repair service and remodeling. For the
+        100 years following, Linek Plumbing has provided quality plumbing services
+        for both commercial and residential projects across the St. Louis area.
+      </p>
+      <a href="/history">Read More</a>
+    </div>
+    <div class="span1-4">
+      <img src="images/history1.png" alt="Linek Plumbing 1916" />
+      <img src="images/history2.png" alt="Linek Plumbing 2016" />
+    </div>
+  </div>
+</section>
+
+<section class="home-choice-section">
+  <div class="group">
+    <div class="span1-1">
+      {% include why_choose_us.html %}
+    </div>
+  </div>
+</section>
+
+<section class="home-contact-section">
+  <div class="group">
+    <div class="span1-2">
+      <hgroup>
+        <h1>Contact</h1>
+      </hgroup>
+
+      <h2>{{ site.phone }}</h2>
+      <address>{{ site.address }}</address>
+
+      <p>Office Hours are between 7:30am and 4:30pm Monday through Friday.</p>
+      <p>Outside of those hours, we offer an emergency answering service with plumbers on call 24/7 (at the same phone number).</p>
+
+      <img src="/images/building-front.png" alt="Linek Plumbing HQ" />
+    </div>
+  </div>
+</section>
