Link homepage and layout images

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ layout: default
       <a href="/history">Read More</a>
     </div>
     <div class="span1-4">
-      <img src="images/history1.png" alt="Linek Plumbing 1916" />
-      <img src="images/history2.png" alt="Linek Plumbing 2016" />
+      <img src="/images/history/family-then.jpg" alt="Linek Plumbing 1916" />
+      <img src="/images/history/family-now.jpg" alt="Linek Plumbing 2016" />
     </div>
   </div>
 </section>
@@ -67,7 +67,7 @@ layout: default
       <p>Office Hours are between 7:30am and 4:30pm Monday through Friday.</p>
       <p>Outside of those hours, we offer an emergency answering service with plumbers on call 24/7 (at the same phone number).</p>
 
-      <img src="/images/building-front.png" alt="Linek Plumbing HQ" />
+      <img src="/images/home/building-front.jpg" alt="Linek Plumbing HQ" />
     </div>
   </div>
 </section>
