--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <header class="bg-dark-blue">
-  <div class="group hero">
+  <div class="hero">
     <div class="span1-2 residential-hero">
       <hgroup class="hero-title-group">
         <h1>Residential</h1>
@@ -25,7 +25,7 @@ layout: default
   </div>
 </header>
 
-<section class="home-services-section bg-dark-blue">
+<section class="bg-dark-blue">
   {% include services_overview.html %}
 </section>
 
@@ -51,11 +51,7 @@ layout: default
 </section>
 
 <section class="home-choice-section">
-  <div class="group">
-    <div class="span1-1">
-      {% include why_choose_us.html %}
-    </div>
-  </div>
+  {% include why_choose_us.html %}
 </section>
 
 <section class="home-contact-section">
@@ -72,6 +68,9 @@ layout: default
       <p>Outside of those hours, we offer an emergency answering service with plumbers on call 24/7 (at the same phone number).</p>
 
       <img src="/images/home/building-front.jpg" alt="Linek Plumbing HQ" />
+    </div>
+    <div class="span1-2">
+      {% include contact_form.html %}
     </div>
   </div>
 </section>
