--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@ layout: default
 ---
 
 <header class="bg-dark-blue">
-  <div class="hero">
+  <!-- <div class="hero">
     <div class="residential-hero"></div>
-    <div class="commercial-hero"></div>
-  </div>
-  <div class="group">
-    <div class="span1-2">
+    <div classm kmk\mk\
+    \"commercial-hero"></div>
+  </div> -->
+  <div class="hero">
+    <div class="residential-hero">
       <hgroup class="hero-title-group">
         <h1>Residential</h1>
         <br />
@@ -17,7 +18,7 @@ layout: default
         </a>
       </hgroup>
     </div>
-    <div class="span1-2">
+    <div class="commercial-hero">
       <hgroup class="hero-title-group">
         <h1>Commercial</h1>
         <br />
@@ -37,7 +38,9 @@ layout: default
   <div class="group">
     <div class="span1-2">
       <hgroup>
-        <h1 class="bright-blue-color underline">Celebrating 100 years!</h1>
+        <h1 class="bright-blue-color underline">
+          Celebrating <span class="gold-100">100</span> years!
+        </h1>
       </hgroup>
       <p>
         In 1916, Linek Brothers Plumbing Company was founded by Frank and Henry
@@ -49,8 +52,10 @@ layout: default
     </div>
     <div class="span1-2">
       <img src="/images/history/family-then.jpg" class="family-then" alt="Linek Plumbing 1916" />
-      <img src="/images/history/family-now.jpg" class="family-now" alt="Linek Plumbing 2016" />
     </div>
+  </div>
+  <div class='larger-pic'>
+    <img src="/images/history/family-now.jpg" class="family-now" alt="Linek Plumbing 2016" />
   </div>
 </section>
 
