Polishing sticky nav

--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@ layout: default
 ---
 
 <header class="bg-dark-blue">
-  <!-- <div class="hero">
-    <div class="residential-hero"></div>
-    <div classm kmk\mk\
-    \"commercial-hero"></div>
-  </div> -->
   <div class="hero">
     <div class="residential-hero">
       <hgroup class="hero-title-group">
@@ -30,7 +25,7 @@ layout: default
   </div>
 </header>
 
-<section class="bg-dark-blue">
+<section class="services-bg bg-dark-blue">
   {% include services_overview.html %}
 </section>
 
