--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
     <div class="span1-2">
       <hgroup>
         <h1 class="bright-blue-color underline">
-          Celebrating <span class="gold-100">100</span> years!
+          Celebrating <span class="gold-100">100 </span> years!
         </h1>
       </hgroup>
       <p>
@@ -66,12 +66,13 @@ layout: default
       </hgroup>
 
       <h2>{{ site.phone }}</h2>
-      <address>{{ site.address }}</address>
+      <address>24 Kirkham Industrial Ct.
+        <br/>Webster Groves, MO 63119</address>
 
-      <p>Office Hours are between 7:30am and 4:30pm Monday through Friday.</p>
-      <p>Outside of those hours, we offer an emergency answering service with plumbers on call 24/7 (at the same phone number).</p>
+      <p>Office Hours are between 7:30am and 4:30pm Monday through Friday.<br/>
+      Outside of those hours, we offer an emergency answering service with plumbers on call 24/7 (at the same phone number).</p>
 
-      <img src="/images/home/building-front.jpg" alt="Linek Plumbing HQ" />
+      <img class="street-view" src="/images/home/building-front.jpg" alt="Linek Plumbing HQ" />
     </div>
     <div class="span1-2">
       {% include contact_form.html %}
