About and Contact pages

--- a/about/index.html
+++ b/about/index.html
@@ -2,3 +2,66 @@
 layout: page
 title: About
 ---
+
+<div class="section bg-dark-blue">
+  <div class="page-header">
+    <div class="span1-2 left-header">
+      <h1>About</h1>
+      <ul>
+        <li>Family owned and operated</li>
+        <li>Fully licensed, bonded, and insured</li>
+        <li>Highly trained union contractors</li>
+      </ul>
+    </div>
+    <div class="span1-2">
+      <img src="/images/residential/sink.jpg">
+    </div>
+  </div>
+</div>
+
+<section class="stripe-bg">
+  <div class="overlay-wrapper">
+    <div class="group">
+      <hgroup class="span1-1">
+        <h1>Affiliations</h1>
+        <p>Why is it important to be affiliated with these organizations?</p>
+      </hgroup>
+    </div>
+    <div class="group">
+      <div class="span1-2">
+        <h2>List 1</h2>
+        <ul>
+          <li>Item</li>
+          <li>Item</li>
+          <li>Item</li>
+        </ul>
+      </div>
+      <div class="span1-2">
+        <h2>List 2</h2>
+        <ul>
+          <li>Item</li>
+          <li>Item</li>
+          <li>Item</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="column-section">
+  <div class="group">
+    <div class="span1-2">
+      <h1>History</h1>
+      <p>Linek Plumbing Company, Inc. has a rich history of providing quality plumbing installations in the St. Louis metropolitan area. The company is supported by an experienced management team and features a veteran staff of licensed, union plumbers from Plumbers’ and Pipefitters’ Local #562.</p>
+      <p>In 1916, Linek Brothers Plumbing Company was founded by Frank and Henry Linek specializing in performing repair service and remodeling. After World War I, Frank took over the busi- ness as sole proprietor and operated out of his home on Califor- nia Street in the City of St. Louis where the business operated until 1970 when it moved to its current location at 24 Kirkham Industrial Drive in Webster Groves in 1970.</p>
+      <p>Frank and his wife, Anna had two ambitious sons, Joe and Bill that followed their father into the plumbing profession. Joe and Bill Linek expanded the company’s scope of work in the 1960s to include larger commercial jobs and continued to maintain and improve service and remodeling.</p>
+      <p>Bill’s two older sons, Bill, Jr. and Jim entered the business right out of high school and Joe’s son, John joined the company in 1978. All three boys worked in the field to fully understand the business.</p>
+      <p>In 1987, Joe retired and Bill, Jr. assumed estimating and office responsibilities. John took over the management of larger commercial jobs and a few years later, Jim gave up field work to run the residential service and remodeling side of the company.</p>
+      <p>In 1992, Bill, Sr. retired and Bill, Jr. and Jim took over the day to day operations of the business. Bill, Jr. and Jim have expanded Linek Plumbing Company, Inc. into a thriving plumbing company specializing in residential service, repair and remodeling and commercial work.</p>
+    </div>
+    <div class="span1-2">
+      <img src="/images/history/family-then.jpg">
+      <img src="/images/history/family-now.jpg"
+    </div>
+  </div>
+</section>
