--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@ title: About
   </div>
 </section>
 
-<section class="column-section">
+<section class="history-section">
   <div class="group">
     <div class="span1-2">
       <h1>History</h1>
