Quick image and link updates

--- a/commercial/index.html
+++ b/commercial/index.html
@@ -12,7 +12,7 @@ title: Commercial Services
       <p></p>
     </div>
     <div class="span1-2">
-      <img src="/images/residential/sink.jpg">
+      <img src="/images/commercial/plan.jpg">
     </div>
   </div>
 </div>
