--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
       <hgroup class="hero-title-group">
         <h1>Residential</h1>
         <br />
-        <a href="{{ '/residential' | prepend: site.baseurl }}" class="button">
+        <a href="{{ '/residential' }}" class="button">
           Learn More
         </a>
       </hgroup>
@@ -17,7 +17,7 @@ layout: default
       <hgroup class="hero-title-group">
         <h1>Commercial</h1>
         <br />
-        <a href="{{ '/commercial' | prepend: site.baseurl }}" class="button">
+        <a href="{{ '/commercial' }}" class="button">
           Learn More
         </a>
       </hgroup>
@@ -43,7 +43,7 @@ layout: default
         100 years following, Linek Plumbing has provided quality plumbing services
         for both commercial and residential projects across the St. Louis area.
       </p>
-      <a class="button" href="/history">Read More</a>
+      <a class="button" href="/about/#history">Read More</a>
     </div>
     <div class="span1-2">
       <img src="/images/history/family-then.jpg" class="family-then" alt="Linek Plumbing 1916" />
