--- a/about/index.html
+++ b/about/index.html
@@ -29,26 +29,18 @@ title: About
     </div>
     <div class="group">
       <div class="span1-2">
-        <h2>List 1</h2>
-        <ul>
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
-        </ul>
+        <img src="/images/about/pic-logo.jpg" class="aff-logo"/>
       </div>
       <div class="span1-2">
-        <h2>List 2</h2>
-        <ul>
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
-        </ul>
+        <br/>
+        <br/>
+        <img src="/images/about/PPLocal562.jpg" class="aff-logo"/>
       </div>
     </div>
   </div>
 </section>
 
-<section class="history-section">
+<section id="history" class="history-section">
   <div class="group">
     <div class="span1-2">
       <h1>History</h1>
