Most of the content

--- a/about/index.html
+++ b/about/index.html
@@ -7,14 +7,16 @@ title: About
   <div class="page-header">
     <div class="span1-2 left-header">
       <h1>About</h1>
+      <p>What sets us apart?</p>
       <ul>
-        <li>Family owned and operated</li>
+        <li>Family owned and operated since 1916</li>
         <li>Fully licensed, bonded, and insured</li>
-        <li>Highly trained union contractors</li>
+        <li>Highly trained union tradesmen</li>
+        <li>Commitment to quality</li>
       </ul>
     </div>
     <div class="span1-2">
-      <img src="/images/residential/sink.jpg">
+      <img src="/images/history/family-now.jpg">
     </div>
   </div>
 </div>
@@ -29,14 +31,54 @@ title: About
     </div>
     <div class="group">
       <div class="span1-2">
-        <img src="/images/about/pic-logo.jpg" class="aff-logo"/>
+        <img src="/images/about/pic.jpg" class="aff-logo"/>
       </div>
       <div class="span1-2">
         <br/>
         <br/>
-        <img src="/images/about/PPLocal562.jpg" class="aff-logo"/>
+        <img src="/images/about/local562.jpg" class="aff-logo"/>
       </div>
     </div>
+    <div class="group">
+      <div class="span1-3">
+        <img src="/images/about/maphcc.jpg" class="aff-logo"/>
+      </div>
+      <div class="span1-3">
+        <img src="/images/about/phcc.jpg" class="aff-logo"/>
+      </div>
+      <div class="span1-3">
+        <img src="/images/about/aspe.jpg" class="aff-logo"/>
+      </div>
+    </div>
+    <div class="group">
+      <div class="span1-3">
+        Many Local Chambers of Commerce including Webster Groves, Kirkwood, Chesterfield, etc.
+      </div>
+      <div class="span1-3">
+        Plumbing Industry Council Board of Directors (Past Board Member)
+      </div>
+      <div class="span1-3">
+        Past President Plumbing Contractors Association
+      </div>
+    </div>
+    <h2>Licensing</h2>
+    <div class="group">
+      <div class="span1-2">
+        <h4>William J. Linek, President</h4>
+        <ul>
+          <li>Master Plumber, St. Louis City and County
+            Jefferson County, St. Charles City and County</li>
+          <li>Master Drain Layer, St. Louis City and County, Jefferson County, St. Charles City and County</li>
+          <li>Master Plumber, State of Illinois</li>
+        </ul>
+      </div>
+      <div class="span1-2">
+        <h4>James G. Linek, Treasurer</h4>
+        <ul>
+          <li>Master Plumber, St. Louis City and County</li>
+          <li>Master Drain layer, St.. Louis City and County</li>
+        </ul>
+      </div>
   </div>
 </section>
 
@@ -45,15 +87,17 @@ title: About
     <div class="span1-2">
       <h1>History</h1>
       <p>Linek Plumbing Company, Inc. has a rich history of providing quality plumbing installations in the St. Louis metropolitan area. The company is supported by an experienced management team and features a veteran staff of licensed, union plumbers from Plumbers’ and Pipefitters’ Local #562.</p>
-      <p>In 1916, Linek Brothers Plumbing Company was founded by Frank and Henry Linek specializing in performing repair service and remodeling. After World War I, Frank took over the busi- ness as sole proprietor and operated out of his home on Califor- nia Street in the City of St. Louis where the business operated until 1970 when it moved to its current location at 24 Kirkham Industrial Drive in Webster Groves in 1970.</p>
-      <p>Frank and his wife, Anna had two ambitious sons, Joe and Bill that followed their father into the plumbing profession. Joe and Bill Linek expanded the company’s scope of work in the 1960s to include larger commercial jobs and continued to maintain and improve service and remodeling.</p>
+      <p>In 1916, Linek Brothers Plumbing Company was founded by Frank and Henry Linek specializing in performing repair service and remodeling. After World War I, Frank took over the business as sole proprietor and operated out of his home on California Street in the City of St. Louis. The business operated there until 1970 when it moved to its current location at 24 Kirkham Industrial Drive in Webster Groves.</p>
+      <p>Frank and his wife, Anna, had two ambitious sons, Joe and Bill, that followed their father into the plumbing profession. Joe and Bill Linek expanded the company’s scope of work in the 1960s to include larger commercial jobs and continued to maintain and improve residential service and remodeling.</p>
       <p>Bill’s two older sons, Bill, Jr. and Jim entered the business right out of high school and Joe’s son, John joined the company in 1978. All three boys worked in the field to fully understand the business.</p>
       <p>In 1987, Joe retired and Bill, Jr. assumed estimating and office responsibilities. John took over the management of larger commercial jobs and a few years later, Jim gave up field work to run the residential service and remodeling side of the company.</p>
-      <p>In 1992, Bill, Sr. retired and Bill, Jr. and Jim took over the day to day operations of the business. Bill, Jr. and Jim have expanded Linek Plumbing Company, Inc. into a thriving plumbing company specializing in residential service, repair and remodeling and commercial work.</p>
+      <p>In 1992, Bill, Sr. retired and Bill, Jr. and Jim took over the day to day operations of the business. Bill, Jr. and Jim have expanded Linek Plumbing Company into a thriving plumbing company specializing in residential service, repair and remodeling and commercial work.</p>
     </div>
     <div class="span1-2">
       <img src="/images/history/family-then.jpg">
-      <img src="/images/history/family-now.jpg"
+      <img src="/images/history/truck-1.jpg">
+      <img src="/images/history/truck-2.jpg">
+      <img src="/images/history/joe.jpg">
     </div>
   </div>
 </section>
