--- a/commercial/index.html
+++ b/commercial/index.html
@@ -9,10 +9,10 @@ title: Commercial Services
       <hgroup>
         <h1>Commercial</h1>
       </hgroup>
-      <p></p>
+      <p>No matter the size of your business, Linek Plumbing is the right choice for your project. After a century in business, we have a vast range of experience in many different types of commercial projects. We offer emergency services 24/7, so you can count on us to be there when you need us most. From design &amp; build solutions to simple service calls — we have the knowledge and experience to get the job done right the first time.</p>
     </div>
     <div class="span1-2">
-      <img src="/images/commercial/plan.jpg">
+      <img src="/images/commercial/plans.jpg">
     </div>
   </div>
 </div>
@@ -22,24 +22,36 @@ title: Commercial Services
     <div class="group">
       <hgroup class="span1-1">
         <h1>Services</h1>
-        <p>For all jobs, big and small, you can count on Linek Plumbing to provide high quality work at a fair price.</p>
+        <p>Here’s a list of the most common commercial problems we solve. Give us a call at 314-962-0956 if you have any questions about other services we provide that may not be listed here.</p>
       </hgroup>
     </div>
     <div class="group">
       <div class="span1-2">
-        <h2>List 1</h2>
+        <h2>New Construction</h2>
         <ul>
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
+          <li>Design Build</li>
+          <li>Site Utilities</li>
+          <li>Water Main Installation</li>
+          <li>Excavation</li>
         </ul>
+        <h2>Emergency Services</h2>
+        <p>We offer emergency service 24/7. Call us at 314-962-0956 any time, and one of our highly qualified tradesmen will be there to solve the issue.</p>
       </div>
       <div class="span1-2">
-        <h2>List 2</h2>
+        <h2>Maintenance, Repairs, &amp; Testing</h2>
         <ul>
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
+          <li>Leaking Faucets and Toilets</li>
+          <li>Water Main Repair</li>
+          <li>Grease Trap Pumping</li>
+          <li>Backflow Testing</li>
+          <li>Diagnosis and Check-ups</li>
+          <li>Installations and Upgrades</li>
+          <li>System Maintenance and Cleaning</li>
+          <li>Clog Removal</li>
+          <li>Flushometer</li>
+          <li>Water Jetting</li>
+          <li>Storm Drains</li>
+          <li>Pipe Lining</li>
         </ul>
       </div>
     </div>
@@ -50,32 +62,32 @@ title: Commercial Services
   <div class="group">
     <div class="span1-1">
       <h1>Industries We've Worked In</h1>
-      <p>We supply and service the top brands and manufacturers.</p>
+      <p>Here’s a list of some of the different industries we’ve worked with. No matter the size or type of business, we’ll have the knowledge and tools to get the job done right.</p>
     </div>
   </div>
   <div class="group">
-    <div class="span1-3">
+    <div class="span1-4">
       <ul>
-        <li>Industry</li>
-        <li>Industry</li>
-        <li>Industry</li>
-        <li>Industry</li>
+        <li>Business Offices</li>
+        <li>Medical Buildings, Health Clinics, and Hospitals</li>
       </ul>
     </div>
-    <div class="span1-3">
+    <div class="span1-4">
       <ul>
-        <li>Industry</li>
-        <li>Industry</li>
-        <li>Industry</li>
-        <li>Industry</li>
+        <li>Restaurants, Bars, and Cafes</li>
+        <li>Office Warehouses &amp; Industrial Centers</li>
       </ul>
     </div>
-    <div class="span1-3">
+    <div class="span1-4">
       <ul>
-        <li>Industry</li>
-        <li>Industry</li>
-        <li>Industry</li>
-        <li>Industry</li>
+        <li>Malls &amp; Shopping Centers</li>
+        <li>Grocery Stores &amp; Food Retailers</li>
+      </ul>
+    </div>
+    <div class="span1-4">
+      <ul>
+        <li>Schools, Colleges, &amp; Universities</li>
+        <li>Tenant Finishes</li>
       </ul>
     </div>
   </div>
