--- a/residential/index.html
+++ b/residential/index.html
@@ -9,7 +9,7 @@ title: Residential Services
       <hgroup>
         <h1>Residential</h1>
       </hgroup>
-      <p>From the special needs of historic homes to installation of the latest energy-efficient fixtures, Linek Plumbing will get the job done right.</p>
+      <p>Whether you’re dealing with a leaky faucet or tackling a big remodel, Linek Plumbing is the right choice for your project. With over 100 years of experience in the industry, our team can ensure the highest quality work at a fair price. From the special considerations of historic homes to the latest in energy efficient fixtures — we have the knowledge and experience to get the job done right the first time.</p>
     </div>
     <div class="span1-2">
       <img src="/images/residential/sink.jpg">
@@ -22,25 +22,53 @@ title: Residential Services
     <div class="group">
       <hgroup class="span1-1">
         <h1>What We Do</h1>
-        <p>For all jobs, big and small, you can count on Linek Plumbing to provide high quality work at a fair price.</p>
+        <p>Here’s a list of the most common residential problems we solve. Give us a call at 314-962-0956 if you have any questions about other services we provide that may not be listed here.</p>
       </hgroup>
     </div>
     <div class="group">
       <div class="span1-2">
-        <h2>List 1</h2>
+        <h2>Repair, Replacement, or Installation</h2>
         <ul>
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
+          <li>Toilet</li>
+          <li>Sink</li>
+          <li>Faucet</li>
+          <li>Water Heater</li>
+          <li>Garbage Disposal</li>
+          <li>Tub</li>
+          <li>Shower</li>
+          <li>Gas Line</li>
+          <li>Washer</li>
+          <li>Dishwasher</li>
+          <li>Garbage Disposal</li>
+          <li>Water Lines</li>
+          <li>Sump Pump</li>
+          <li>Backflow Preventer</li>
+          <li>Tankless Hot Water Heater</li>
+          <li>Septic System</li>
         </ul>
       </div>
       <div class="span1-2">
-        <h2>List 2</h2>
+        <h2>Sewer &amp; Drain</h2>
         <ul>
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
+          <li>Clogged Drain Clearing</li>
+          <li>Drain/Sewer Line</li>
+          <li>Main Line</li>
+          <li>Septic Tanks</li>
+          <li>Pipe Repair</li>
+          <li>Floor Drains</li>
+          <li>Clear Lines (snaking)</li>
+          <li>Grease Traps</li>
         </ul>
+        <h2>Maintenance &amp; Diagnostics</h2>
+        <ul>
+          <li>Gas Leaks</li>
+          <li>Frozen Pipes</li>
+          <li>Leaking Pipes</li>
+          <li>Drain Leaks</li>
+          <li>Backflow Testing</li>
+          <li>Trap Cleaning</li>
+          <li>Low Water Pressure</li>
+          <li>Code Adherence Updates</li>
       </div>
     </div>
   </div>
