Icomoon and footer icons

--- a/commercial/index.html
+++ b/commercial/index.html
@@ -68,26 +68,50 @@ title: Commercial Services
   <div class="group">
     <div class="span1-4">
       <ul>
-        <li>Business Offices</li>
-        <li>Medical Buildings, Health Clinics, and Hospitals</li>
+        <li>
+          <i class="icon-office"></i>
+          Business Offices
+        </li>
+        <li>
+          <i class="icon-hospital-o"></i>
+          Medical Buildings, Health Clinics, and Hospitals
+        </li>
       </ul>
     </div>
     <div class="span1-4">
       <ul>
-        <li>Restaurants, Bars, and Cafes</li>
-        <li>Office Warehouses &amp; Industrial Centers</li>
+        <li>
+          <i class="icon-food"></i>
+          Restaurants, Bars, and Cafes
+        </li>
+        <li>
+          <i class="icon-truck"></i>
+          Office Warehouses &amp; Industrial Centers
+        </li>
       </ul>
     </div>
     <div class="span1-4">
       <ul>
-        <li>Malls &amp; Shopping Centers</li>
-        <li>Grocery Stores &amp; Food Retailers</li>
+        <li>
+          <i class="icon-shopping-bag"></i>
+          Malls &amp; Shopping Centers
+        </li>
+        <li>
+          <i class="icon-basket"></i>
+          Grocery Stores &amp; Food Retailers
+        </li>
       </ul>
     </div>
     <div class="span1-4">
       <ul>
-        <li>Schools, Colleges, &amp; Universities</li>
-        <li>Tenant Finishes</li>
+        <li>
+          <i class="icon-university"></i>
+          Schools, Colleges, &amp; Universities
+        </li>
+        <li>
+          <i class="icon-building-o"></i>
+          Tenant Finishes
+        </li>
       </ul>
     </div>
   </div>
