--- a/residential/index.html
+++ b/residential/index.html
@@ -82,39 +82,25 @@ title: Residential Services
     </div>
   </div>
   <div class="group">
-    <div class="brand span1-4">
-      Kohler
-      <img src=""/>
+    <div class="brand span1-3">
+      <img src="/images/residential/brands-01.jpg">
     </div>
-    <div class="brand span1-4">
-      Moen
-      <img src=""/>
+    <div class="brand span1-3">
+      <img src="/images/residential/brands-02.jpg">
     </div>
-    <div class="brand span1-4">
-      Grohe
-      <img src=""/>
-    </div>
-    <div class="brand span1-4">
-      Delta
-      <img src=""/>
+    <div class="brand span1-3">
+      <img src="/images/residential/brands-03.jpg">
     </div>
   </div>
   <div class="group">
-    <div class="brand span1-4">
-      American Standard
-      <img src=""/>
+    <div class="brand span1-3">
+      <img src="/images/residential/brands-04.jpg">
     </div>
-    <div class="brand span1-4">
-      Toto
-      <img src=""/>
+    <div class="brand span1-3">
+      <img src="/images/residential/brands-05.jpg">
     </div>
-    <div class="brand span1-4">
-      Gerber
-      <img src=""/>
-    </div>
-    <div class="brand span1-4">
-      Whirlpool
-      <img src=""/>
+    <div class="brand span1-3">
+      <img src="/images/residential/brands-06.jpg">
     </div>
   </div>
 </section>
