Home page tablet responsive styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<header class="bg-dark-blue">
+<section class="bg-dark-blue">
   <div class="hero">
     <div class="residential-hero">
       <hgroup class="hero-title-group">
@@ -23,7 +23,7 @@ layout: default
       </hgroup>
     </div>
   </div>
-</header>
+</section>
 
 <section class="services-bg bg-dark-blue">
   {% include services_overview.html %}
