Page right image as background and overlay and stripe heights

--- a/about/index.html
+++ b/about/index.html
@@ -15,14 +15,12 @@ title: About
         <li>Commitment to quality</li>
       </ul>
     </div>
-    <div class="span1-2">
-      <img src="/images/history/family-now.jpg">
-    </div>
+    <div id="about-img" class="span1-2 right-image"></div>
   </div>
 </div>
 
-<section class="stripe-bg">
-  <div class="overlay-wrapper">
+<section id="about-stripe" class="stripe-bg">
+  <div id="about-overlay" class="overlay-wrapper">
     <div class="group">
       <hgroup class="span1-1">
         <h1>Affiliations</h1>
