--- a/commercial/index.html
+++ b/commercial/index.html
@@ -11,14 +11,12 @@ title: Commercial Services
       </hgroup>
       <p>No matter the size of your business, Linek Plumbing is the right choice for your project. After a century in business, we have a vast range of experience in many different types of commercial projects. We offer emergency services 24/7, so you can count on us to be there when you need us most. From design &amp; build solutions to simple service calls — we have the knowledge and experience to get the job done right the first time.</p>
     </div>
-    <div class="span1-2">
-      <img src="/images/commercial/plans.jpg">
-    </div>
+    <div id="plans-img" class="span1-2 right-image"></div>
   </div>
 </div>
 
-<section class="stripe-bg">
-  <div class="overlay-wrapper">
+<section id="comm-stripe" class="stripe-bg">
+  <div id="comm-overlay" class="overlay-wrapper">
     <div class="group">
       <hgroup class="span1-1">
         <h1>Services</h1>
