--- a/residential/index.html
+++ b/residential/index.html
@@ -11,14 +11,12 @@ title: Residential Services
       </hgroup>
       <p>Whether you’re dealing with a leaky faucet or tackling a big remodel, Linek Plumbing is the right choice for your project. With over 100 years of experience in the industry, our team can ensure the highest quality work at a fair price. From the special considerations of historic homes to the latest in energy efficient fixtures — we have the knowledge and experience to get the job done right the first time.</p>
     </div>
-    <div class="span1-2">
-      <img src="/images/residential/sink.jpg">
-    </div>
+    <div id="sink-img" class="span1-2 right-image"></div>
   </div>
 </div>
 
-<section class="stripe-bg">
-  <div class="overlay-wrapper">
+<section id="resi-stripe" class="stripe-bg">
+  <div id="resi-overlay" class="overlay-wrapper">
     <div class="group">
       <hgroup class="span1-1">
         <h1>What We Do</h1>
