--- a/commercial/index.html
+++ b/commercial/index.html
@@ -64,7 +64,7 @@ title: Commercial Services
     </div>
   </div>
   <div class="group">
-    <div class="span1-4">
+    <div class="industry-list span1-3">
       <ul>
         <li>
           <i class="icon-office"></i>
@@ -76,7 +76,7 @@ title: Commercial Services
         </li>
       </ul>
     </div>
-    <div class="span1-4">
+    <div class="industry-list span1-3">
       <ul>
         <li>
           <i class="icon-food"></i>
@@ -88,7 +88,7 @@ title: Commercial Services
         </li>
       </ul>
     </div>
-    <div class="span1-4">
+    <div class="industry-list span1-3">
       <ul>
         <li>
           <i class="icon-shopping-bag"></i>
@@ -100,7 +100,9 @@ title: Commercial Services
         </li>
       </ul>
     </div>
-    <div class="span1-4">
+  </div>
+  <div class="group stragglers">
+    <div class="industry-list span1-3">
       <ul>
         <li>
           <i class="icon-university"></i>
