Industry section responsive

--- a/commercial/index.html
+++ b/commercial/index.html
@@ -64,53 +64,83 @@ title: Commercial Services
     </div>
   </div>
   <div class="group">
-    <div class="industry-list span1-3">
+    <div class="industry-list">
       <ul>
         <li>
-          <i class="icon-office"></i>
-          Business Offices
+          <div class="industry-icon">
+            <i class="icon-office"></i>
+          </div>
+          <div class="industry-name">
+            Business Offices
+          </div>
         </li>
         <li>
-          <i class="icon-hospital-o"></i>
-          Medical Buildings, Health Clinics, and Hospitals
+          <div class="industry-icon">
+            <i class="icon-hospital-o"></i>
+          </div>
+          <div class="industry-name">
+            Medical Buildings, Health Clinics, and Hospitals
+          </div>
         </li>
       </ul>
     </div>
-    <div class="industry-list span1-3">
+    <div class="industry-list">
       <ul>
         <li>
-          <i class="icon-food"></i>
-          Restaurants, Bars, and Cafes
+          <div class="industry-icon">
+            <i class="icon-food"></i>
+          </div>
+          <div class="industry-name">
+            Restaurants, Bars, and Cafes
+          </div>
         </li>
         <li>
-          <i class="icon-truck"></i>
-          Office Warehouses &amp; Industrial Centers
+          <div class="industry-icon">
+            <i class="icon-truck"></i>
+          </div>
+          <div class="industry-name">
+            Office Warehouses &amp; Industrial Centers
+          </div>
         </li>
       </ul>
     </div>
-    <div class="industry-list span1-3">
+    <div class="industry-list">
       <ul>
         <li>
-          <i class="icon-shopping-bag"></i>
-          Malls &amp; Shopping Centers
+          <div class="industry-icon">
+            <i class="icon-shopping-bag"></i>
+          </div>
+          <div class="industry-name">
+            Malls &amp; Shopping Centers
+          </div>
         </li>
         <li>
-          <i class="icon-basket"></i>
-          Grocery Stores &amp; Food Retailers
+          <div class="industry-icon">
+            <i class="icon-basket"></i>
+          </div>
+          <div class="industry-name">
+            Grocery Stores &amp; Food Retailers
+          </div>
         </li>
       </ul>
     </div>
-  </div>
-  <div class="group stragglers">
-    <div class="industry-list span1-3">
+    <div class="industry-list">
       <ul>
         <li>
-          <i class="icon-university"></i>
-          Schools, Colleges, &amp; Universities
+          <div class="industry-icon">
+            <i class="icon-university"></i>
+          </div>
+          <div class="industry-name">
+            Schools, Colleges, &amp; Universities
+          </div>
         </li>
         <li>
-          <i class="icon-building-o"></i>
-          Tenant Finishes
+          <div class="industry-icon">
+            <i class="icon-building-o"></i>
+          </div>
+          <div class="industry-name">
+            Tenant Finishes
+          </div>
         </li>
       </ul>
     </div>
