--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: About
     <div class="span1-2 left-header">
       <h1>About</h1>
       <p>What sets us apart?</p>
-      <ul>
+      <ul class="about-list">
         <li>Family owned and operated since 1916</li>
         <li>Fully licensed, bonded, and insured</li>
         <li>Highly trained union tradesmen</li>
