About page responsive

--- a/about/index.html
+++ b/about/index.html
@@ -27,36 +27,52 @@ title: About
         <p>Why is it important to be affiliated with these organizations?</p>
       </hgroup>
     </div>
-    <div class="group">
+    <div class="group aff-logos">
       <div class="span1-2">
-        <img src="/images/about/pic.jpg" class="aff-logo"/>
+        <img
+          alt="Plumbing Industry Council"
+          class="aff-logo"
+          src="/images/about/pic.jpg"
+        />
       </div>
       <div class="span1-2">
-        <br/>
-        <br/>
-        <img src="/images/about/local562.jpg" class="aff-logo"/>
+        <img
+          alt="Plumbers and Pipefitter Local 562 Union"
+          class="aff-logo pp-local"
+          src="/images/about/local562.jpg"
+        />
+      </div>
+    </div>
+    <div class="group aff-logos">
+      <div class="span1-3">
+        <img
+          alt="Missouri Association of Plumbing Heating Cooling Contractors"
+          class="aff-logo"
+          src="/images/about/maphcc.jpg"
+        />
+      </div>
+      <div class="span1-3">
+        <img
+          alt="Plumbing Heating Cooling Contractors"
+          class="aff-logo"
+          src="/images/about/phcc.jpg"
+        />
+      </div>
+      <div class="span1-3">
+        <img
+          alt="American Society of Plumbing Engineers"
+          class="aff-logo"
+          src="/images/about/aspe.jpg"
+        />
       </div>
     </div>
     <div class="group">
-      <div class="span1-3">
-        <img src="/images/about/maphcc.jpg" class="aff-logo"/>
-      </div>
-      <div class="span1-3">
-        <img src="/images/about/phcc.jpg" class="aff-logo"/>
-      </div>
-      <div class="span1-3">
-        <img src="/images/about/aspe.jpg" class="aff-logo"/>
-      </div>
-    </div>
-    <div class="group">
-      <div class="span1-3">
-        Many Local Chambers of Commerce including Webster Groves, Kirkwood, Chesterfield, etc.
-      </div>
-      <div class="span1-3">
-        Plumbing Industry Council Board of Directors (Past Board Member)
-      </div>
-      <div class="span1-3">
-        Past President Plumbing Contractors Association
+      <div class="span1-1">
+        <ul>
+          <li>Many Local Chambers of Commerce including Webster Groves, Kirkwood, Chesterfield, etc.</li>
+          <li>Plumbing Industry Council Board of Directors (Past Board Member)</li>
+          <li>Past President Plumbing Contractors Association</li>
+        </ul>
       </div>
     </div>
     <h2>Licensing</h2>
@@ -77,6 +93,7 @@ title: About
           <li>Master Drain layer, St.. Louis City and County</li>
         </ul>
       </div>
+    </div>
   </div>
 </section>
 
@@ -92,10 +109,22 @@ title: About
       <p>In 1992, Bill, Sr. retired and Bill, Jr. and Jim took over the day to day operations of the business. Bill, Jr. and Jim have expanded Linek Plumbing Company into a thriving plumbing company specializing in residential service, repair and remodeling and commercial work.</p>
     </div>
     <div class="span1-2">
-      <img src="/images/history/family-then.jpg">
-      <img src="/images/history/truck-1.jpg">
-      <img src="/images/history/truck-2.jpg">
-      <img src="/images/history/joe.jpg">
+      <img
+        class="historic-img"
+        src="/images/history/family-then.jpg"
+      />
+      <img
+        class="historic-img"
+        src="/images/history/truck-1.jpg"
+      />
+      <img
+        class="historic-img"
+        src="/images/history/joe.jpg"
+      />
+      <img
+        class="historic-img"
+        src="/images/history/truck-2.jpg"
+      />
     </div>
   </div>
 </section>
