--- a/residential/index.html
+++ b/residential/index.html
@@ -80,24 +80,22 @@ title: Residential Services
     </div>
   </div>
   <div class="group">
-    <div class="brand span1-3">
+    <div class="brand">
       <img src="/images/residential/brands-01.jpg">
     </div>
-    <div class="brand span1-3">
+    <div class="brand">
       <img src="/images/residential/brands-02.jpg">
     </div>
-    <div class="brand span1-3">
+    <div class="brand">
       <img src="/images/residential/brands-03.jpg">
     </div>
-  </div>
-  <div class="group">
-    <div class="brand span1-3">
+    <div class="brand">
       <img src="/images/residential/brands-04.jpg">
     </div>
-    <div class="brand span1-3">
+    <div class="brand">
       <img src="/images/residential/brands-05.jpg">
     </div>
-    <div class="brand span1-3">
+    <div class="brand">
       <img src="/images/residential/brands-06.jpg">
     </div>
   </div>
