--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: About
   <div class="page-header">
     <div class="span1-2 left-header">
       <h1>About</h1>
-      <p>What sets us apart?</p>
+      <p>When you choose Linek Plumbing, you can count on receiving quality service from experienced professionals that you can trust. A few reasons for you to feel confident about hiring us for all of your plumbing needs:</p>
       <ul class="about-list">
         <li>Family owned and operated since 1916</li>
         <li>Fully licensed, bonded, and insured</li>
@@ -24,7 +24,7 @@ title: About
     <div class="group">
       <hgroup class="span1-1">
         <h1>Affiliations</h1>
-        <p>Why is it important to be affiliated with these organizations?</p>
+        <p>We are committed to providing you the highest quality service. We're proud to be a part of these organizations that join us with other professionals in the industry to maintain best practices and continue learning the newest technologies.</p>
       </hgroup>
     </div>
     <div class="group aff-logos">
